base: Add bool to enable/disable doze by default
Change-Id: Iababda8518fb8e11f5bd90958c51f3f148c180e4
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/core/res/res/values/cr_config.xml
+++ b/core/res/res/values/cr_config.xml
@@ -21,4 +21,7 @@
 
     <!-- Whether auto face unlock is enabled by default -->
     <bool name="config_face_unlock_enabled_by_default">false</bool>
+
+    <!-- Whether doze feature is enabled by default in settings. -->
+    <bool name="config_doze_enabled_by_default">false</bool>
 </resources>
