--- a/core/res/res/values/cr_symbols.xml
+++ b/core/res/res/values/cr_symbols.xml
@@ -21,4 +21,7 @@
 
   <!-- Whether auto face unlock is enabled by default -->
   <java-symbol type="bool" name="config_face_unlock_enabled_by_default" />
+
+  <!-- Doze mode -->
+  <java-symbol type="bool" name="config_doze_enabled_by_default" />
 </resources>
