Add Reboot/Recovery QS Tile
Vectorized Reboot/Recovery QS tile drawables Alex Cruz <du.alexcruz@gmail.com>
- Resized but reused the power menu reboot icon to keep things uniformed
- Created a recovery vector that fits the same style too

mydongistiny: Updated priv-app whitelist to fix boot

Change-Id: I0762ffb2b3ddf8c833662a237bde20581e8cc614
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/packages/SystemUI/res/values/cr_strings.xml
+++ b/packages/SystemUI/res/values/cr_strings.xml
@@ -214,4 +214,8 @@
 
     <!-- VPN icon -->
     <string name="status_bar_vpn">VPN</string>
+
+    <!-- Reboot/Recovery QS Tile -->
+    <string name="quick_settings_reboot_label">Reboot</string>
+    <string name="quick_settings_reboot_recovery_label">Recovery</string>
 </resources>
