Extend reboot tile to add power off
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/packages/SystemUI/res/values/cr_strings.xml
+++ b/packages/SystemUI/res/values/cr_strings.xml
@@ -215,7 +215,8 @@
     <!-- VPN icon -->
     <string name="status_bar_vpn">VPN</string>
 
-    <!-- Reboot/Recovery QS Tile -->
+    <!-- Reboot/Recovery/PowerOff QS Tile -->
     <string name="quick_settings_reboot_label">Reboot</string>
     <string name="quick_settings_reboot_recovery_label">Recovery</string>
+    <string name="quick_settings_poweroff_label">Power off</string>
 </resources>
