Make Recents "Free Ram" text translatable
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/packages/SystemUI/res/values/cr_strings.xml
+++ b/packages/SystemUI/res/values/cr_strings.xml
@@ -208,4 +208,7 @@
 
     <!-- OneHand mode QS tile -->
     <string name="qs_onehand_label">One Handed mode</string>
+ 
+    <!-- Free ram -->
+    <string name="recents_free_ram">Free RAM: %1$d MB</string>
 </resources>
