--- a/core/res/res/values/cr_symbols.xml
+++ b/core/res/res/values/cr_symbols.xml
@@ -118,4 +118,5 @@
 
   <!-- System fonts -->
   <java-symbol type="array" name="config_fontPackages" />
+  <java-symbol type="string" name="fontservice_incompatible_font" />
 </resources>
