--- a/packages/SystemUI/res/values/cr_strings.xml
+++ b/packages/SystemUI/res/values/cr_strings.xml
@@ -205,4 +205,7 @@
     <string name="text_clock_m_fifty_seven">Fifty Seven</string>
     <string name="text_clock_m_fifty_eight">Fifty Eight</string>
     <string name="text_clock_m_fifty_nine">Fifty Nine</string>
+
+    <!-- OneHand mode QS tile -->
+    <string name="qs_onehand_label">One Handed mode</string>
 </resources>
