base: Add seekbar to media notification
Change-Id: Ic6b1b32040c4f60fdcecba6583c4f59d42c1491b
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/core/res/res/values/cr_symbols.xml
+++ b/core/res/res/values/cr_symbols.xml
@@ -212,4 +212,13 @@
 
   <!-- Whether device supports internal audio recording -->
   <java-symbol type="bool" name="config_hasInternalAudioRecordingSupport" />
+
+  <!-- Media notification seekbar control -->
+  <java-symbol type="id" name="notification_media_seekbar_container" />
+  <java-symbol type="layout" name="notification_material_media_seekbar" />
+  <java-symbol type="id" name="notification_media_progress" />
+  <java-symbol type="id" name="notification_media_progress_bar" />
+  <java-symbol type="id" name="notification_media_progress_time" />
+  <java-symbol type="id" name="notification_media_elapsed_time" />
+  <java-symbol type="id" name="notification_media_total_time" />
 </resources>
