Use headline font on battery percentage
Change-Id: Ibd5aa0c95efde2cab8dee05a17348d388b6077ba
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/packages/SystemUI/res/values/cr_styles.xml
+++ b/packages/SystemUI/res/values/cr_styles.xml
@@ -43,4 +43,12 @@
         <item name="android:fontFamily">@*android:string/config_headlineFontFamilyMedium</item>
         <item name="android:textStyle">normal</item>
     </style>
+
+    <!-- Battery percentage -->
+    <style name="BatteryPercentageTextStyle">
+        <item name="android:textSize">@dimen/qs_time_expanded_size</item>
+        <item name="android:fontFamily">@*android:string/config_headlineFontFamilyMedium</item>
+        <item name="android:textColor">?android:attr/textColorPrimary</item>
+        <item name="android:textStyle">normal</item>
+    </style>
 </resources>
