Separate custom fonts from material theme [2/2]
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/core/res/res/values/cr_styles.xml
+++ b/core/res/res/values/cr_styles.xml
@@ -22,4 +22,14 @@
         <item name="fontFamily">@string/config_headlineFontFamilyMedium</item>
         <item name="textColor">?attr/textColorPrimary</item>
     </style>
+    <style name="TextAppearancePreference">
+        <item name="textSize">@dimen/text_size_subhead_material</item>
+        <item name="fontFamily">@string/config_headlineFontFamily</item>
+        <item name="textColor">?attr/textColorPrimary</item>
+    </style>
+    <style name="TextAppearancePreferenceCategory">
+        <item name="textSize">@dimen/text_size_body_2_material</item>
+        <item name="fontFamily">@string/config_headlineFontFamilyMedium</item>
+        <item name="textColor">?attr/textColorPrimary</item>
+    </style>
 </resources>
