--- a/core/res/res/values/cr_symbols.xml
+++ b/core/res/res/values/cr_symbols.xml
@@ -198,4 +198,10 @@
   <java-symbol type="string" name="gaming_mode_notification_content" />
   <java-symbol type="string" name="gaming_mode_enabled_toast" />
   <java-symbol type="string" name="gaming_mode_disabled_toast" />
+
+  <!-- Custom accent color -->
+  <java-symbol type="color" name="custom_accent_color" />
+
+  <!-- Custom fonts -->
+  <java-symbol type="style" name="TextAppearanceTitle" />
 </resources>
