--- a/core/res/res/values/cr_symbols.xml
+++ b/core/res/res/values/cr_symbols.xml
@@ -206,4 +206,7 @@
 
   <!-- Custom fonts -->
   <java-symbol type="style" name="TextAppearanceTitle" />
+
+  <!-- Custom styles -->
+  <java-symbol type="style" name="CustomThemeDeviceDefaultDialogAlert" />
 </resources>
