fwb: Add support for internal audio recording
Change-Id: I953c07d9a511b53ddb79f6a7ce5b47ca0c079acb
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/core/res/res/values/cr_symbols.xml
+++ b/core/res/res/values/cr_symbols.xml
@@ -209,4 +209,7 @@
 
   <!-- Custom styles -->
   <java-symbol type="style" name="CustomThemeDeviceDefaultDialogAlert" />
+
+  <!-- Whether device supports internal audio recording -->
+  <java-symbol type="bool" name="config_hasInternalAudioRecordingSupport" />
 </resources>
