--- a/core/res/res/layout/notification_material_media_seekbar.xml
+++ b/core/res/res/layout/notification_material_media_seekbar.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright (C) 2019 AOSiP
+  ~ Copyright (C) 2019 The Android Open Source Project
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -16,46 +16,46 @@
   -->
 
 <!-- Layout for the seekbar in media notification -->
-<LinearLayout 
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/notification_media_progress" 
-    android:layout_width="match_parent" 
-    android:layout_height="wrap_content" 
+    android:id="@+id/notification_media_progress"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
     android:orientation="vertical">
-    <SeekBar 
-        android:id="@+id/notification_media_progress_bar" 
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" 
-        android:layout_marginTop="-12dp" 
-        android:layout_marginBottom="-24dp" 
-        android:paddingTop="24dp" 
-        android:paddingBottom="24dp" 
-        android:clickable="true" 
-        android:maxHeight="3dp" 
-        android:splitTrack="false" 
-        style="@style/Widget.ProgressBar.Horizontal" />
-    <FrameLayout 
-        android:id="@+id/notification_media_progress_time" 
-        android:layout_width="match_parent" 
-        android:layout_height="wrap_content" 
-        android:layout_marginBottom="11dp"
-        android:layout_gravity="center">
-        <TextView 
+    <RelativeLayout
+        android:id="@+id/notification_media_progress_time"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="18dp">
+        <TextView
             android:id="@+id/notification_media_elapsed_time"
-            android:layout_width="match_parent" 
-            android:layout_height="wrap_content" 
-            android:layout_alignParentLeft="true" 
-            android:layout_marginStart="@dimen/notification_content_margin_start" 
-            android:gravity="start" 
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_marginStart="@dimen/notification_content_margin_start"
+            android:gravity="start"
             style="@style/Widget.Material.Notification.Text" />
-        <TextView 
-            android:id="@+id/notification_media_total_time" 
+        <SeekBar
+            android:id="@+id/notification_media_progress_bar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" 
-            android:layout_alignParentRight="true" 
-            android:layout_marginEnd="@dimen/notification_content_margin_end" 
-            android:gravity="end" 
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@id/notification_media_total_time"
+            android:layout_toRightOf="@id/notification_media_elapsed_time"
+            android:layout_alignTop="@id/notification_media_elapsed_time"
+            android:layout_alignBottom="@id/notification_media_total_time"
+            android:clickable="true"
+            android:maxHeight="3dp"
+            android:splitTrack="false"
+            style="@style/Widget.ProgressBar.Horizontal" />
+        <TextView
+            android:id="@+id/notification_media_total_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginEnd="@dimen/notification_content_margin_end"
+            android:gravity="end"
             style="@style/Widget.Material.Notification.Text" />
-    </FrameLayout>
+    </RelativeLayout>
 </LinearLayout>
