FontTile: Show text below font name
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/packages/SystemUI/res/values/cr_strings.xml
+++ b/packages/SystemUI/res/values/cr_strings.xml
@@ -231,4 +231,5 @@
     <!-- Font Tile -->
     <string name="quick_settings_font_label">Fonts</string>
     <string name="quick_settings_font_detail_label">Select a font</string>
+    <string name="quick_settings_font_pangram" translatable="false">The quick brown fox jumps over the lazy dog</string>
 </resources>
