--- a/core/res/res/values-ca-rES/cr_strings.xml
+++ b/core/res/res/values-ca-rES/cr_strings.xml
@@ -34,10 +34,10 @@
     <string name="gaming_mode_disabled_toast">S\'ha desactivat el mode Gaming</string>
     <!-- Pocket Lock -->
     <string name="pocket_lock_message_long_press">Prem i mantén el botó d’encesa per desbloquejar</string>
-    <string name="pocket_view_title">Pocket mode is on</string>
-    <string name="pocket_view_title_cancel">To use your phone:</string>
-    <string name="pocket_view_top_tag_cancel">Check if the blue area of your phone is clear of any obstructions, and clean off any dirt or dust.</string>
-    <string name="pocket_view_top_tag_cancel2">Long press the power button to force quit pocket mode.</string>
+    <string name="pocket_view_title">El mode butxaca està activat</string>
+    <string name="pocket_view_title_cancel">Per a utilitzar el vostre telèfon:</string>
+    <string name="pocket_view_top_tag_cancel">Comproveu si l\'àrea blava del teu telèfon està lliure d\'obstruccions i netegeu tota la pols o brutícia.</string>
+    <string name="pocket_view_top_tag_cancel2">Premeu prolongadament el botó d\'encesa per sortir del mode butxaca de forma forçada.</string>
     <string name="pocket_view_top_tag_number1">1.\u0020</string>
     <string name="pocket_view_top_tag_number2">2.\u0020</string>
     <!-- Button that copies the url to the log of a crashed application -->
