--- a/packages/SystemUI/res/values-ca-rES/cr_strings.xml
+++ b/packages/SystemUI/res/values-ca-rES/cr_strings.xml
@@ -200,7 +200,7 @@
     <string name="tristate_rotation_90">Horitzontal (90º)</string>
     <string name="tristate_rotation_270">Horitzontal (270º)</string>
     <!-- Screenrecorder -->
-    <string name="screenrecord_stopdot_label">Show stop dot\nLongpress to move it</string>
+    <string name="screenrecord_stopdot_label">Mostra el botó d\'aturada\nMantén premut per a moure\'l</string>
     <string name="screenrecord_lowquality_label">Menys qualitat per a un fitxer de menor mida</string>
     <!-- Biometric Dialog - Use Face -->
     <string name="biometric_dialog_button_use_face">Utilitza la cara</string>
