PixelPropsUtils: Make spoofBuildGms overlayable
Inspired by:

https://github.com/AICP/frameworks_base/commit/4a1619436e7bae5f6be869d824ec1ebd1079a336

and

https://stackoverflow.com/a/28580502/5614863

--- a/core/res/res/values/cr_config.xml
+++ b/core/res/res/values/cr_config.xml
@@ -147,4 +147,7 @@
 
     <!-- Whether to show settings for hiding notch fill -->
     <bool name="config_showHideNotchSettings">false</bool>
+
+    <!-- Alter build parameters for avoiding hardware attestation enforcement -->
+    <string-array name="config_spoofBuildGms" translatable="false"></string-array>
 </resources>
