--- a/packages/SystemUI/res/values-ru-rRU/cr_strings.xml
+++ b/packages/SystemUI/res/values-ru-rRU/cr_strings.xml
@@ -232,7 +232,7 @@
     <string name="status_bar_data_saver">Экономия трафика</string>
     <string name="status_bar_vpn">VPN</string>
     <!-- On The Go -->
-    <string name="onthego_notif_ticker">Режим «На ходу» активирован</string>
+    <string name="onthego_notif_ticker">Режим «На ходу» включен</string>
     <string name="onthego_notif_title">Режим «На ходу» активен</string>
     <string name="onthego_notif_stop">Остановить</string>
     <string name="onthego_notif_options">Настройки</string>
